engines/bastion/app/assets/stylesheets/bastion/nutupane.less
@import "variables";

.table {
  table-layout: fixed;

  .number-cell {
    text-align: right;
  }

  .action-cell {
    text-align: center;
  }

  th.row-select,
  td.row-select {
    width: 25px;
    max-width: 25px;
  }
}

.table-reduced {
  width: 20%;
  float: left;
}

.container-scroll-wrapper {
  overflow-x: hidden;
  overflow-y: auto;
}

.table-mask {
  opacity: 0.4;
}

th.row-select,
td.row-select {
  width: 25px;
  max-width: 25px;
}

.nutupane {
  .table {
    margin-bottom: 0;

    tr:hover td, tr:hover td a,
    tr.focus td, tr.focus td a {
      background-color: @listhover_color;
      color: #FFF;
    }

    tr.active, tbody tr:hover, tr.selected-row td {
      background-color: @listhover_color;
      color: #FFF;

      a {
        color: #FFF;
      }
    }

    th.sortable {
      cursor: pointer;
    }

    th.small,
    td.small {
      width: 120px;
    }
    th {
      color: rgb(92, 92, 92);

      .sort-icon {
        position: relative;
        left: 4px;
      }

      .icon-sort-down {
        bottom: 2px;
      }

      .icon-sort-up {
        top: 4px;
      }

    }

    td.active-row {
      background-color: lighten(@listhover_color, 8%);
      color: white;

      a {
        color: white;
      }
    }

    .active-row {
      .icon-active {
        margin-top: 1px;
        font-size: 14px;
        position: absolute;
        right: 15px;
      }
    }
  }
}

.nutupane-bar {
  background: rgb(250, 250, 250);
  padding: 10px 15px 10px 0;
  border-bottom: 1px solid rgb(230, 230, 230);
  overflow: auto;

  h2 { margin: 5px 0 0 0; }

  .form {
    width: auto;
    float: left;

    input {
      margin-bottom: 0;
    }
  }
}

.nutupane-select-all {
  text-align: center;
  .alert-info;
}
.nutupane-select-all-selected {
  text-align: center;
  .alert-success;
}

.details {
  display: inline-block;
  vertical-align: top;
  padding: 0 40px 0 0;
  width: 50%;
}

.info-label {
  font-weight: 600;
  display: inline-block;
  width: 25%;
  vertical-align: top;
}

.info-value {
  width: 69%;
  display: inline-block;
  padding-left: 4px;
  word-wrap: break-word;
}

.detail:not(:last-child) {
  margin-bottom: 5px;
}

.filter-input {
  float: left;
  margin-right: 10px;
  width: 33%;
}

.details-header {
  position: relative;
  margin-bottom: 10px;
  overflow: auto;

  .action-context {
    width: 300px;
  }
}

.divider {
  height: 30px;
  border-bottom: 1px solid #CCC;
  display: inline-block;
  width: 100%;
}

.details-full {
  width: 100%;
  padding: 0;
}

.nutupane-details {
  height: 100%;
  left: 20%;
  min-width: 30%;
  padding: 20px;
  position: absolute;
  width: 80%;
  border-left: 1px solid #CCC;
  overflow-y: auto;
  .box-shadow(0 0 5px #dddddd inset);

  .details-header {
    min-height: 40px;
  }

  .nutupane-sub-section {
    height: 250px;
    padding-top: 20px;

    section {
      padding: 0 0 30px;
    }
  }

  .icon-backward {
    padding-right: 5px;
  }

  h2 {
    margin: 0;
  }

  h4, h5 {
    margin: 10px 0;
    text-transform: capitalize;
  }

  h5 {
    font-size:  120%;
  }

  .new-header {
    border-bottom: 3px solid #e3e5e7;
  }

  ul {
    list-style: none;
    margin: 0;

    &.bullet {
      list-style: circle;
      margin-left: 15px;
    }
  }

  .sub-detail {
    margin: 5px 15px 0;
  }

  .advanced-info {
    clear: both;
  }

  .nav.nav-tabs {
    margin-bottom: 20px;
  }

  .nutupane-bar {
    background: inherit;
    border-bottom: none;
  }
}

.nutupane-info {
  padding: 7px 0 0;
  margin-right: 10px;
}

.detail:not(:last-child) {
  margin-bottom: 5px;
}

.details-header {
  position: relative;
  margin-bottom: 10px;

  .action-context {
    width: 300px;
  }
}

.info-label {
  font-weight: 600;
  display: inline-block;
  width: 25%;
  vertical-align: top;
}

.info-value {
  width: 69%;
  display: inline-block;
  padding-left: 4px;
  word-wrap: break-word;
}

.select-action {
  margin-top: 6px;

  button {
    margin-right: 15px;
    vertical-align: middle;
  }
}

.inline-icon {
  font-size: 110%;
  margin-top: 3px;
  margin-right: 3px;
}

.expand-icon {
  padding-right: 5px;
}

.editable {
  overflow: auto;

  &:hover {
    background: rgb(245, 245, 245);
  }
}

div.alch-dialog.open.info-value {
  padding: 10px;
  width: 400px;
}

.details-navigation {
  margin-bottom: 30px;
  border-bottom: 2px solid #e3e5e7;
  width: 100%;

  ul {
    list-style: none;
    margin: 0 27px 0 0;
    padding: 0 5px;
    -webkit-padding-start: 0;
    height: 30px;

    li {
      font-size: 15px;
      display: inline-block;
      padding: 0 15px;

      &:first-child {
        padding: 0 15px 0 0;
      }

      a {
        position: relative;
        top: 2px;
        display: block;
        height: 30px;
        padding: 0 6px;
        text-align: center;
        text-decoration: none;
        color: black;

        &:hover {
            color: @listhover_color;
            border-bottom: 2px solid @listhover_color;
        }

        &:first-child {
          padding: 0 6px 0 3px;
        }
      }
    }
    .active {

      a {
        color: @listhover_color;
        border-bottom: 2px solid @listhover_color;
      }
    }

  }
}

.details-section {
  padding: 0 15px;
}

